--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <body>
     <div class="container">
         <div style="text-align: center;">
-            <h2>Tạo chữ ký email cho NKCentral</h2>
+            <h2>Tạo chữ ký email cho PSC Media</h2>
         </div>
 
         <label>Chọn nhân sự</label>
